// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconLogo > renders correctly 1`] = `
<div
  class="hover-class pa-3"
  data-v-d3bde101=""
  id="app-evocon-logo"
>
  <div
    class="evocon-logo"
    data-v-d3bde101=""
  />
</div>
`;

exports[`EvoconLogo > renders correctly in mobile view 1`] = `
<div
  class="hover-class hover-class--mobile"
  data-v-d3bde101=""
  id="app-evocon-logo"
>
  <div
    class="evocon-logo evocon-logo--mobile"
    data-v-d3bde101=""
  />
</div>
`;
